feat: add api for getting amount of deleted words
